# neonize

./: README.md
neonAsmBasicCam/: CMakeLists.txt  neonAsmBasicCam.cpp  neonAsmBasicCam.cpp~  neonAsmLoad.cpp~
neonAsmLoad/: CMakeLists.txt  load1.cpp~  neonAsmLoad.cpp~  testVid.cpp~
neonAsmRecolor/: CMakeLists.txt  neonAsmRecolor.cpp  neonAsmRecolor.cpp~  neonAsmRecolorVid.cpp  neonAsmRecolorVid.cpp~
neonAsmThresh/: neonAsmThresh.cpp  neonAsmThreshVid.cpp  neonAsmThreshVid.cpp~
neonAsmThreshVal/: CMakeLists.txt  neonAsmGrayVid.cpp~  neonAsmThresh.cpp  neonAsmThresh.cpp~  neonAsmThreshVid.cpp  neonAsmThreshVid.cpp~
neonAsmXEdge/: CMakeLists.txt  neonAsmXEdge.cpp  neonAsmXEdge.cpp~  neonAsmXEdgeVid.cpp  neonAsmXEdgeVid.cpp~  neonAsmXEdgeVidStrong.cpp
