cmake_minimum_required(VERSION 2.8)
project( neonAsmBasicCam )
SET( CMAKE_CXX_FLAGS  "-mfpu=neon -mfloat-abi=hard" )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( neonAsmBasicCam neonAsmBasicCam.cpp )
target_link_libraries( neonAsmBasicCam ${OpenCV_LIBS} )
