cmake_minimum_required(VERSION 2.8)
project( neonAsmRecolor )
SET( CMAKE_CXX_FLAGS  "-mfpu=neon -mfloat-abi=hard" )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( neonAsmRecolor neonAsmRecolor.cpp )
target_link_libraries( neonAsmRecolor ${OpenCV_LIBS} )
add_executable( neonAsmRecolorVid neonAsmRecolorVid.cpp )
target_link_libraries( neonAsmRecolorVid ${OpenCV_LIBS} )