cmake_minimum_required(VERSION 2.8)
project( neonAsmThresh )
SET( CMAKE_CXX_FLAGS  "-mfpu=neon -mfloat-abi=hard" )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( neonAsmThresh neonAsmThresh.cpp )
target_link_libraries( neonAsmThresh ${OpenCV_LIBS} )
add_executable( neonAsmThreshVid neonAsmThreshVid.cpp )
target_link_libraries( neonAsmThreshVid ${OpenCV_LIBS} )