cmake_minimum_required(VERSION 2.8)
project( neonAsmXEdge )
SET( CMAKE_CXX_FLAGS  "-mfpu=neon -mfloat-abi=hard" )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( neonAsmXEdge neonAsmXEdge.cpp )
target_link_libraries( neonAsmXEdge ${OpenCV_LIBS} )
add_executable( neonAsmXEdgeVid neonAsmXEdgeVid.cpp )
target_link_libraries( neonAsmXEdgeVid ${OpenCV_LIBS} )